--- a/source/.coleslawrc
+++ b/source/.coleslawrc
@@ -2,7 +2,7 @@
 (;; Required information
  :author "Masataro Asai"                         ;; to be placed on post pages and in the copyright/CC-BY-SA notice
  :deploy-dir "../deploy/"                ;; for Coleslaw's generated HTML to go in
- :domain "https://guicho271828.github.com"      ;; to generate absolute links to the site content
+ :domain "https://guicho271828.github.io"      ;; to generate absolute links to the site content
  :routing ((:post           "posts/~a") ;; to determine the URL scheme of content on the site
            (:tag-index      "tag/~a")
            (:month-index    "date/~a")
