--- a/source/.coleslawrc
+++ b/source/.coleslawrc
@@ -25,16 +25,26 @@
            (static-pages)
            ; (versioned)    ;; *Remove comment to enable symlinked, timestamped deploys.
           )
+ ;; :sitenav ((:url "/profile/"
+ ;;                 :name "Profile")
+ ;;           (:url "/publications/"
+ ;;                 :name "Publications")
+ ;;           (:url "http://twitter.com/guicho271828"
+ ;;                 :name "Twitter")
+ ;;           (:url "http://github.com/guicho271828"
+ ;;                 :name "Github")
+ ;;           (:url "https://www.linkedin.com/in/masataro-asai-158a0638/"
+ ;;                 :name "LinkedIn"))
  :sitenav ((:url "/profile/"
-                 :name "<i class=\"fa fa-user\" aria-hidden=\"true\"></i> Profile")
+                 :name "<i class=\"fa fa-user\"     aria-hidden=\"true\"></i><br>Profile")
            (:url "/publications/"
-                 :name "<i class=\"fa fa-book\" aria-hidden=\"true\"></i> Publications")
+                 :name "<i class=\"fa fa-book\"     aria-hidden=\"true\"></i><br>Publications")
            (:url "http://twitter.com/guicho271828"
-                 :name "<i class=\"fa fa-twitter\" aria-hidden=\"true\"></i>")
+                 :name "<i class=\"fa fa-twitter\"  aria-hidden=\"true\"></i><br>Twitter")
            (:url "http://github.com/guicho271828"
-                 :name "<i class=\"fa fa-github\" aria-hidden=\"true\"></i>")
+                 :name "<i class=\"fa fa-github\"   aria-hidden=\"true\"></i><br>Github")
            (:url "https://www.linkedin.com/in/masataro-asai-158a0638/"
-                 :name "<i class=\"fa fa-linkedin\" aria-hidden=\"true\"></i>"))
+                 :name "<i class=\"fa fa-linkedin\" aria-hidden=\"true\"></i><br>LinkedIn"))
  :staging-dir "/tmp/guicho271828.github.com/"  ;; for Coleslaw to do intermediate work, default: "/tmp/coleslaw"
 )
 
