--- a/source/.coleslawrc
+++ b/source/.coleslawrc
@@ -9,7 +9,7 @@
            (:numeric-index  "~d")
            (:feed           "~a.xml")
            (:tag-feed       "tag/~a.xml"))
- :title "CL-USER> (start-up (the engine *bp-ze*))" ;; a site title
+ :title "Knee Deep in Symbols" ;; a site title
  :theme "mine"                        ;; to select one of the themes in "coleslaw/themes/"
  
  ;; Optional information
@@ -25,16 +25,6 @@
            (static-pages)
            ; (versioned)    ;; *Remove comment to enable symlinked, timestamped deploys.
           )
- ;; :sitenav ((:url "/profile/"
- ;;                 :name "Profile")
- ;;           (:url "/publications/"
- ;;                 :name "Publications")
- ;;           (:url "http://twitter.com/guicho271828"
- ;;                 :name "Twitter")
- ;;           (:url "http://github.com/guicho271828"
- ;;                 :name "Github")
- ;;           (:url "https://www.linkedin.com/in/masataro-asai-158a0638/"
- ;;                 :name "LinkedIn"))
  :sitenav ((:url "/profile/"
                  :name "<i class=\"fa fa-user\"     aria-hidden=\"true\"></i><br>Profile")
            (:url "/publications/"
