--- a/source/.coleslawrc
+++ b/source/.coleslawrc
@@ -1,7 +1,7 @@
 ;;; -*- mode : lisp -*-
 (;; Required information
  :author "Masataro Asai"                         ;; to be placed on post pages and in the copyright/CC-BY-SA notice
- :deploy-dir "../deploy/"                ;; for Coleslaw's generated HTML to go in
+ :deploy-dir "../_deploy/"                ;; for Coleslaw's generated HTML to go in
  :domain "https://guicho271828.github.io"      ;; to generate absolute links to the site content
  :routing ((:post           "posts/~a") ;; to determine the URL scheme of content on the site
            (:tag-index      "tag/~a")
